syntax = "proto3";

package auth;

option java_multiple_files = true;
option java_package = "com.ecommerce.backend.grpc";
option java_outer_classname = "AuthProto";


service AuthService {
  rpc CreateUser (CreateUserRequest) returns (AuthServiceResponse);
  rpc DeleteUser (DeleteUserRequest) returns (AuthServiceResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message DeleteUserRequest {
  string username = 1;
}

message AuthServiceResponse {
  bool success = 1;
  string message = 2;
}